--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </section>
 <section id="projects" class="project-tile"  >
     <link href="www.google.com">
+    <p>we made a decision to proceed this project on Thursday</p>
 </section>
 </body>
 </html>
